# 3171599-R-andres-gil

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backup_week-02/week-2/: index.html
models/: entity.py
routers/: videos.py
schemas/: category.py  filters.py
week-02/: README.md
week-02/week-2/: README.md  pnpm-lock.yaml  tsconfig.json
week-02/week-2/src/: App.tsx
week-02/week-2/src/components/: Header.tsx  SearchBar.tsx  Stats.tsx  VideoForm.tsx  VideoList.tsx
week-03/: README.md
week-03/models/: category.py
week-03/routers/: categories.py
week-03/schemas/: entity.py
week-03/week-01/: README.md
week-03/week-02/week-2/: package.json
week-03/week-02/week-2/src/components/: VideoCard.tsx
week-03/week-02/week-2/src/styles/: App.css
week-03/week-02/week-2/src/types/: index.ts
