[tool.poetry]
name = "streaming-api"
version = "0.1.0"
description = "API de catálogo para plataforma de streaming"
authors = ["Tu Nombre <tu.email@dominio.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
